<resources>
    <string name="app_name">ATM</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_rule">Enter a strong password</string>
    <string name="age">Age</string>
    <string name="age_rule">Enter Your Age</string>
    <string name="sign_in">Sign In</string>
    <string name="number">Number</string>
    <string name="number_rule">Enter Your phone number</string>
    <string name="username_rule">Enter Your Email</string>
    <string name="error_invalid_password">Please enter valid password</string>
    <string name="error_invalid_age">Please enter valid age</string>
    <string name="error_invalid_number">Please enter valid number</string>
    <string name="error_invalid_username">Please enter valid username</string>
    <string name="error_unique_password">Password is not match</string>
    <string name="message_successful">Successful</string>
    <string name="title_dialog_message">Please wait ...</string>
    <string name="title_dialog">Processing</string>
    <string name="error_invalid_login">Invalid username or password!</string>
    <string name="error_empty_age">Enter your age</string>
    <string name="error_empty_number">Enter your number</string>
    <string name="error_format_age">Enter correct format age</string>
    <string name="error_format_number">Enter correct format number</string>
    <string name="network_general_error">network error</string>
    <string name="network_json_error">jason network error</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="current_balance">Current Balance\n</string>
    <string name="cvv2">Cvv2</string>
    <string name="account_number">Account Number</string>
    <string name="card_number">Card Number</string>
    <string name="profile_btn">Profile</string>
    <string name="transactions_btn">Transactions</string>
    <string name="profileTitle">Profile</string>
    <string name="transactionsTitle">Transaction</string>
    <string name="add_transactions_btn">Add</string>
    <string name="choose_type_transaction">Choose Type\n</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="balance">Balance</string>
    <string name="enter_balance">Enter Balance</string>
    <string name="enter_password">Enter Password</string>
    <string name="origin_account">"Origin Account "</string>
    <string name="enter_origin_account">Enter Origin Account Number</string>
    <string name="destination_card">"Destination card "</string>
    <string name="enter_destination_card">Destination Card Number\n</string>
    <string name="cvv2_tv">Cvv2</string>
    <string name="enter_cvv2_number">"Enter Cvv2 "</string>
    <string name="expiration_tv">Expiration Date</string>
    <string name="enter_expiration">"Enter Epiration Date "</string>
    <string name="save_btn">Save</string>
    <string name="error_invalid_date_format">"Date type error enter correct format "</string>
    <string name="expire_date">Expiration Date</string>
    <string name="transaction_save_to_db">"Save to database "</string>
    <string name="error_invalid_balance">Invalid Type</string>
    <string name="error_empty_field">Enter cvv2</string>
    <string name="error_invalid_cvv2">Invalid Cvv2</string>
    <string name="error_expired_date">Your card is expired</string>
    <string name="delete_report">"Delete Transaction "</string>
    <string name="are_you_sure">Are sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_username">Enter Your Email</string>
    <string-array name="transaction_types">
        <item>Withdraw</item>
        <item>CTC</item>
    </string-array>
</resources>